force-app/main/default/objects/Account/fields/Account_Target_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Account_Target_Percentage__c</fullName>
    <formula>Total_Invoice_Amount_this_Year__c/Customer_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Target Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>