force-app/main/default/objects/Account/fields/Additional_Surcharges_on_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Additional_Surcharges_on_Invoice__c</fullName>
    <label>Additional Surcharges on Invoice</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eur1</fullName>
            </value>
            <value>
                <fullName>EXA</fullName>
            </value>
            <value>
                <fullName>Euro pallets</fullName>
            </value>
            <value>
                <fullName>US pallets</fullName>
            </value>
            <value>
                <fullName>FITO certificate</fullName>
            </value>
            <value>
                <fullName>Health certificate</fullName>
            </value>
            <value>
                <fullName>Certificate of origin (digital or paper)</fullName>
            </value>
            <value>
                <fullName>Duplicaat COO</fullName>
            </value>
            <value>
                <fullName>Registration certificate</fullName>
            </value>
            <value>
                <fullName>NAQS certificate</fullName>
            </value>
            <value>
                <fullName>Legalisation of documents / Apostille on certificaat</fullName>
            </value>
            <value>
                <fullName>VISA (COO stamp) invoice</fullName>
            </value>
            <value>
                <fullName>VISA (COO stamp) andere doc</fullName>
            </value>
            <value>
                <fullName>Extra Copy</fullName>
            </value>
            <value>
                <fullName>ATA carnet (for fairs)</fullName>
            </value>
            <value>
                <fullName>Euromed document (for Israel)</fullName>
            </value>
            <value>
                <fullName>ATR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>