force-app/main/default/objects/Account/fields/Bill_to_Total_Sales_Incl_Tax__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Total_Sales_Incl_Tax__c</fullName>
    <label>Bill-to: Total Sales Incl Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>