force-app/main/default/objects/Account/fields/Business_Central_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Central_Id__c</fullName>
    <externalId>true</externalId>
    <label>Business Central Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>