force-app/main/default/objects/Account/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Market__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Segment</valueSetName>
    </valueSet>
</CustomField>