force-app/main/default/objects/Account/fields/Copy_Billing_Address_to_Shipping_Addres__c.field-meta.xml
<CustomField>
    <fullName>Copy_Billing_Address_to_Shipping_Addres__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy Billing Address to Shipping Addres</label>
    <type>Checkbox</type>
</CustomField>