force-app/main/default/objects/Account/fields/Customer_Target__c.field-meta.xml
<CustomField>
    <fullName>Customer_Target__c</fullName>
    <inlineHelpText>The agreed upon revenue that this customer should create</inlineHelpText>
    <label>Customer Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>