force-app/main/default/objects/Account/fields/Customer_Target_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Customer_Target_Tracker__c</fullName>
    <formula>IMAGE(&quot;/resource/slds_colors/neutral-0.png&quot;,&quot;&quot;,10,1)&amp;
IF(Account_Target_Percentage__c  &gt;= 1,
IMAGE(&quot;/resource/slds_colors/green.png&quot;,&quot;FULL&quot;,10, 100),
IF(
Account_Target_Percentage__c  &gt; 0.75,
IMAGE(&quot;/resource/slds_colors/green.png&quot;,&quot;MOSTLY FULL&quot;,10, (Account_Target_Percentage__c *100)),
IF(
Account_Target_Percentage__c &gt; 0.33,
IMAGE(&quot;/resource/slds_colors/orange.png&quot;,&quot;PARTIALLY FULL&quot;,10,(Account_Target_Percentage__c *100)),
IMAGE(&quot;/resource/slds_colors/red.png&quot;,&quot;MOSTLY EMPTY&quot;,10,(Account_Target_Percentage__c *100))))
&amp; IMAGE(&quot;/resource/slds_colors/neutral-3.png&quot;,&quot;&quot;,10,(1 - Account_Target_Percentage__c ) * 100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Target Tracker</label>
    <type>Text</type>
</CustomField>