force-app/main/default/objects/Account/fields/Customer_Tariff_Classification__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tariff_Classification__c</fullName>
    <label>Customer Tariff Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>