force-app/main/default/objects/Account/fields/Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Type__c</fullName>
    <label>Discount Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Marketing Discount</fullName>
            </value>
            <value>
                <fullName>End of Year Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>