force-app/main/default/objects/Account/fields/DunsNumber__c.field-meta.xml
<CustomField>
    <fullName>DunsNumber__c</fullName>
    <label>D-U-N-S Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>