force-app/main/default/objects/Account/fields/Expected_Volume_in_mio_Capsules__c.field-meta.xml
<CustomField>
    <fullName>Expected_Volume_in_mio_Capsules__c</fullName>
    <label>Expected Volume in mio Capsules</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>