force-app/main/default/objects/Account/fields/External_Platform_Customer_Info__c.field-meta.xml
<CustomField>
    <fullName>External_Platform_Customer_Info__c</fullName>
    <label>External Platform Customer Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>