force-app/main/default/objects/Account/fields/INCO_Terms__c.field-meta.xml
<CustomField>
    <fullName>INCO_Terms__c</fullName>
    <label>INCO Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CIF - Cost Ins and Freight</fullName>
            </value>
            <value>
                <fullName>Afhalen op locatie</fullName>
            </value>
            <value>
                <fullName>Kosten en vracht</fullName>
            </value>
            <value>
                <fullName>Kosten, verzekering en vracht</fullName>
            </value>
            <value>
                <fullName>Vrachtvrij incl. verzekering</fullName>
            </value>
            <value>
                <fullName>Vrachtvrij tot</fullName>
            </value>
            <value>
                <fullName>Franco grens</fullName>
            </value>
            <value>
                <fullName>Geleverd op bestemming</fullName>
            </value>
            <value>
                <fullName>Franco incl. rechten</fullName>
            </value>
            <value>
                <fullName>Franco excl. rechten</fullName>
            </value>
            <value>
                <fullName>Franco af kade</fullName>
            </value>
            <value>
                <fullName>Af schip geleverd</fullName>
            </value>
            <value>
                <fullName>Af magazijn</fullName>
            </value>
            <value>
                <fullName>Franco langszij schip</fullName>
            </value>
            <value>
                <fullName>Vrachtvrij tot vervoerder</fullName>
            </value>
            <value>
                <fullName>Franco aan boord</fullName>
            </value>
            <value>
                <fullName>LEVERING</fullName>
            </value>
            <value>
                <fullName>Franco</fullName>
            </value>
            <value>
                <fullName>Franco vanaf 250€</fullName>
            </value>
            <value>
                <fullName>Franco vanaf 350€</fullName>
            </value>
            <value>
                <fullName>Franco vanaf 500€</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
            <value>
                <fullName>FCA Londerzeel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>