force-app/main/default/objects/Account/fields/Is_Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Is_Bill_To__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Bill-To</label>
    <type>Checkbox</type>
</CustomField>