force-app/main/default/objects/Account/fields/Method_of_Business_Product__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Business_Product__c</fullName>
    <label>Method of Business &amp; Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Made to Order</fullName>
            </value>
            <value>
                <fullName>Made to Stock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>