force-app/main/default/objects/Account/fields/Minimum_Order_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Order_Quantity__c</fullName>
    <label>Minimum Order Quantity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>