force-app/main/default/objects/Account/fields/Number_Of_Doors__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Doors__c</fullName>
    <label>Number Of Doors</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>