force-app/main/default/objects/Account/fields/Number_of_Hotel_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hotel_Rooms__c</fullName>
    <label>Number of Hotel Rooms</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>