force-app/main/default/objects/Account/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100% Prepay</fullName>
            </value>
            <value>
                <fullName>14 days invoice date</fullName>
            </value>
            <value>
                <fullName>30 days invoice date</fullName>
            </value>
            <value>
                <fullName>2% discount within 30 days invoice date</fullName>
            </value>
            <value>
                <fullName>90% prepayment 10% after arrival</fullName>
            </value>
            <value>
                <fullName>20% prepayment / balance before delivery</fullName>
            </value>
            <value>
                <fullName>15 days invoice date</fullName>
            </value>
            <value>
                <fullName>100% prepayment</fullName>
            </value>
            <value>
                <fullName>3% discount within 15 days invoice date / 60 days without discount</fullName>
            </value>
            <value>
                <fullName>60 days invoice date</fullName>
            </value>
            <value>
                <fullName>3% discount within 60 days invoice date</fullName>
            </value>
            <value>
                <fullName>95% prepayment 5% after arrival</fullName>
            </value>
            <value>
                <fullName>10 days invoice date</fullName>
            </value>
            <value>
                <fullName>1,5% discount within 30 days invoice date</fullName>
            </value>
            <value>
                <fullName>3% discount within 15 days invoice date</fullName>
            </value>
            <value>
                <fullName>30 days (prepaid via reversed factoring)</fullName>
            </value>
            <value>
                <fullName>30 days end of month</fullName>
            </value>
            <value>
                <fullName>50% prepayment / balance 30 days invoice date</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>domiciliatie</fullName>
            </value>
            <value>
                <fullName>End of invoice month</fullName>
            </value>
            <value>
                <fullName>Free of charge</fullName>
            </value>
            <value>
                <fullName>30% upon order / balance 30 days invoice date</fullName>
            </value>
            <value>
                <fullName>7 days invoice date</fullName>
            </value>
            <value>
                <fullName>45 days invoice date</fullName>
            </value>
            <value>
                <fullName>21 days invoice date</fullName>
            </value>
            <value>
                <fullName>2% discount within 45 days invoice date</fullName>
            </value>
            <value>
                <fullName>50% prepayment / balance 2 days invoice date</fullName>
            </value>
            <value>
                <fullName>90 days invoice date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>