force-app/main/default/objects/Account/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beans</fullName>
            </value>
            <value>
                <fullName>Belmio</fullName>
            </value>
            <value>
                <fullName>Private Label</fullName>
            </value>
            <value>
                <fullName>Smart Label</fullName>
            </value>
            <value>
                <fullName>Belmoca</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>