force-app/main/default/objects/Account/fields/Projected_Volume_EUR__c.field-meta.xml
<CustomField>
    <fullName>Projected_Volume_EUR__c</fullName>
    <label>Projected Volume (EUR)</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>