force-app/main/default/objects/Account/fields/Shelf_Life__c.field-meta.xml
<CustomField>
    <fullName>Shelf_Life__c</fullName>
    <label>Shelf Life</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>24 Months After Production</fullName>
            </value>
            <value>
                <fullName>Guarantee Base 2/3</fullName>
            </value>
            <value>
                <fullName>18 Months</fullName>
                <default>true</default>
                <label>18 Months</label>
            </value>
            <value>
                <fullName>+/- 16 Months Specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>