force-app/main/default/objects/Account/fields/Shelf_Life_Info__c.field-meta.xml
<CustomField>
    <fullName>Shelf_Life_Info__c</fullName>
    <label>Shelf Life Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>