force-app/main/default/objects/Account/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <formula>Account_Target_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>