force-app/main/default/objects/Account/fields/Tax_Area__c.field-meta.xml
<CustomField>
    <fullName>Tax_Area__c</fullName>
    <label>Tax Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Klanten/leveranciers (niet EU)</fullName>
            </value>
            <value>
                <fullName>Klanten/leveranciers (binnenland)</fullName>
            </value>
            <value>
                <fullName>Klanten/leveranciers (EU)</fullName>
            </value>
            <value>
                <fullName>Vrijgesteld van BTW</fullName>
            </value>
            <value>
                <fullName>Intercompany (btw-eenheid)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>