force-app/main/default/objects/Account/fields/Total_Order_Amount_this_Year__c.field-meta.xml
<CustomField>
    <fullName>Total_Order_Amount_this_Year__c</fullName>
    <label>Total Order Amount this Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>