force-app/main/default/objects/Account/fields/Total_Sales_Excl_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Excl_Tax__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Sales Excl Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>