force-app/main/default/objects/Account/fields/Total_Sales_Incl_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Incl_Tax__c</fullName>
    <label>Total Sales Incl Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>