force-app/main/default/objects/Account/fields/Vat_Number__c.field-meta.xml
<CustomField>
    <fullName>Vat_Number__c</fullName>
    <label>Vat Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>