force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Customer_Target_Tracker__c</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Mine</filterScope>
    <label>My Accounts</label>
</ListView>